--- a/home.css
+++ b/home.css
@@ -79,7 +79,7 @@
 .cta{
     display: flex;
     justify-content: left;
-    padding: 40px 0px;
+    padding: 10px 0px;
 }
 
 .look-projects{
@@ -121,7 +121,10 @@
 }
 
 .home-right-image{
-  width: 100%;
+  width: 75%;
+  text-align: center;
+  justify-self: center;
+  align-self: center;
 }
 
 .counter-container{
@@ -166,7 +169,68 @@
     background-repeat: no-repeat;
 }
 
+@media only screen and (max-width: 992px){
+    .home{
+        flex-direction: column;
+    }
+    .home-container{
+        justify-content: space-around;
+    }
+    .home-right-image{
+        display: none;
+    }
+    .home-left-text{
+        display: flex;
+        justify-content: center;
+        text-align: center;
+    }
+    .language-list{
+        justify-content: center;
+    }
+    .cta{
+        justify-content: center;
+    }
+}
 
+@media only screen and (max-width: 1450px){
+    .title{
+        font-size: 5rem;
+    }
+    
+    .sub-title{
+        font-size: 2rem;
+    }
+    
+    .sub-sub-title{
+        font-size: 1.5rem;
+    }
+    .cta{
+        font-size: 0.9rem;
+    }
+}
+
+@media only screen and (max-width: 1180px){
+    .title{
+        font-size: 3.9rem;
+    }
+    
+    .sub-title{
+        font-size: 1.5rem;
+    }
+    
+    .sub-sub-title{
+        font-size: 1rem;
+    }
+    .cta{
+        font-size: 0.9rem;
+    }
+    .counter-number{
+        font-size: 1.2rem;
+    }
+    .counter-name{
+        font-size: 0.8rem;
+    }
+}
 
 .footer-container{
     display: flex;
