--- a/home.css
+++ b/home.css
@@ -190,6 +190,9 @@
     .cta{
         justify-content: center;
     }
+    .get-more{
+        display: none;
+    }
 }
 
 @media only screen and (max-width: 1450px){
