--- a/home.css
+++ b/home.css
@@ -5,14 +5,6 @@
     min-height: 100vh;
 }
 
-.full-height{
-    display: flex;
-    min-height: 100vh;
-    width: 100%;
-    padding: 70px 30px;
-    padding-bottom: 30px;
-}
-
 .home-container{
     background-color: #1D2D44;
     flex-direction: column;
@@ -31,6 +23,7 @@
     max-width: 800px;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 
 .home-left-text{
@@ -39,14 +32,14 @@
 }
 
 .title{
-    font-size: 7rem;
+    font-size: 8rem;
     font-style: normal;
     font-weight: bolder;
     color: #F0EBD8;
 }
 
 .sub-title{
-    font-size: 2rem;
+    font-size: 2.5rem;
     font-style: normal;
     font-weight: bold;
     color: #F0EBD8;
@@ -79,7 +72,7 @@
 .cta{
     display: flex;
     justify-content: left;
-    padding: 20px 0px;
+    padding: 30px 0px;
 }
 
 .look-projects{
