--- a/styles.css
+++ b/styles.css
@@ -16,3 +16,11 @@ html{
 a{
 text-decoration: none;
 }
+
+.full-height{
+    display: flex;
+    min-height: 100vh;
+    width: 100%;
+    padding: 70px 30px;
+    padding-bottom: 30px;
+}
